[add]=>cookie, session, all the message, profile
first basic version of the site

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,5 +10,39 @@
 
     <title>remember</title>
   </head>
-  <body>
-    
+  <body style="overflow-x: hidden;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">remember</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/message">all the message</a>
+            </li>
+            
+            
+          </ul>
+          <div>
+            <% if(logged){ %>
+              <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  <%- username -%>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="/profile">profile</a></li>
+                  <li><a class="dropdown-item" href="/logout">log out</a></li>
+                </ul>
+              </div>
+            <% }else{ %>
+              <a class="nav-link btn btn-primary" href="/login">login</a>
+            <% } %>
+          </div>
+        </div>
+      </div>
+    </nav>
