--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,23 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
-    <title>Remember</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-
-    <div class="mb-3">
-      <form>
-        <div class="form-floating mb-3">
-          
+<%- include('header', {logged:logged, username:username}); -%>
+<div>
+    <div class="row">
+        <div class="col-md-6">
+            <center style="margin-left: 30px; margin-right: 30px; margin-top: 80px;">
+                <h1>Welcome to remember</h1>
+                <hr>
+                <p class="lead">Remember is a new social network that allows you to write message and to see what other user write</p>
+                <div class="row">
+                    <a class="col-4 offset-1 btn btn-primary" href="/login">Login</a>
+                    <a class="col-4 offset-2 btn btn-secondary" href="/message">All the message</a>
+                </div>
+            </center>
         </div>
-      </form>
+        <div class="col-md-6">
+            <center>
+                <img src="images/company.jpg" style="width: 80%;">
+            </center>
+        </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
-  </body>
-</html>
+</div>
+ 
+<%- include('footer') -%>
